syntax = "proto3";
package VrmProtobuf;

import "google/protobuf/wrappers.proto";

message Meta
{
  // Describe the name of the avatar model
  string title = 1;
  
  // Describe the version that creates the model
  string version = 2;
  
  // Describe the name of the author of the model
  string author = 3;
  
  // Describe the contact information of the author
  string contactInformation = 4;
  
  // Describe original / related works of the avatar (URL), if any
  string reference = 5;
  
  // The index to access the thumbnail image of the avatar model in gltf.images. The texture resolution of 2048x2048 is recommended
  google.protobuf.Int32Value thumbnailImage = 6;
  
  // A person who can perform with this avatars
  string allowedUser = 7;
  
  // Perform violent acts with this avatar
  string violentUsage = 8;
  
  // Perform sexual acts with this avatar
  string sexualUsage = 9;
  
  // Commercial use
  string commercialUsage = 10;
  
  // Describe the URL links of license with regard to other permissions
  string otherPermissionUrl = 11;
  
  // License Type
  string license = 12;
  
  // Describe the URL links of other license
  string otherLicenseUrl = 13;
}